feat(open-census-open-telemetry-bridge): [#1246] enable reflection in tests with JDK 11+